@startuml

title __WIDGET's Class Diagram__\n

  namespace com.aaron.justlike {
    namespace common {
      namespace widget {
        class com.aaron.justlike.common.widget.MyGridLayoutManager {
            - isScrollEnabled : boolean
            + MyGridLayoutManager()
            + MyGridLayoutManager()
            + MyGridLayoutManager()
            + canScrollVertically()
            + onLayoutChildren()
            + setScrollEnabled()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace widget {
        class com.aaron.justlike.common.widget.SquareView {
            + SquareView()
            + SquareView()
            + SquareView()
            # onMeasure()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace common {
      namespace widget {
        class com.aaron.justlike.common.widget.ViewWrapper {
            - target : ImageView
            + ViewWrapper()
            + setAlpha()
            + setSaturation()
        }
      }
    }
  }
  

  com.aaron.justlike.common.widget.MyGridLayoutManager -up-|> androidx.recyclerview.widget.GridLayoutManager
  com.aaron.justlike.common.widget.SquareView -up-|> com.bm.library.PhotoView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
